apps/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc-cip
  namespace: whoami
spec:
  selector:
    app: whoami
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
