apps/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        cert-manager.io/cluster-issuer: cloudflare-issuer
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
        traefik.ingress.kubernetes.io/router.middlewares: infrastructure-redirect-https@kubernetescrd
    name: whoami-ingress
    namespace: whoami
spec:
    rules:
        - host: ENC[AES256_GCM,data:TfCpRoSCm+4HHdRns/ENDkmoOx13rUCr77g=,iv:257nRt/FkE782oNOKV7f/2N4XEnbPEWe1/ocVjstzYk=,tag:sCIuh6C+QWfoUYxZmPiMnw==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: whoami-svc-cip
                        port:
                            number: 80
    tls:
        - hosts:
            - ENC[AES256_GCM,data:3guxj5lZZATVgcoQZtouKyEtSsn1lLoKOIU=,iv:J9W5m8LUaqQr2k6HtrRVv6F0SEYsSklgCdpaw/uMs88=,tag:2YzsO8v+KmbkRXJ4vOrgAA==,type:str]
          secretName: whoami-cert
sops:
    lastmodified: "2026-06-23T17:32:10Z"
    mac: ENC[AES256_GCM,data:+bvnAG8NbMnvO7RuZIdj9EtUhwEeAGMns/dLgKuDgGNJsrrtOJDaOnqTGw4XD8nKVDWAaPDp3/NbYCW0+JfSbBx8xAoSdwYYGgzTqnZNvGvMTdaXjGC4JdbUR7Fm9r0PRPJyizR8CDqUf8buFhYDIJP/eJROtbHNxZPBIYab1ws=,iv:xadYLKSrkPuN5YtSdBh6GGjWlaolJ27lmdiamK7iLy8=,tag:tg2C9C7ZxHTe4UYMmuem6Q==,type:str]
    pgp:
        - created_at: "2026-06-23T17:32:10Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA1R72LzcpgpmAQ//SW13uqREC0rEGvcuvdIx9Fe/5zfY2hAZdBe5iMGAcMst
[...]
            =5RMz
            -----END PGP MESSAGE-----
          fp: 08083A92DBB719D2E10998259B44720A645D6802
    encrypted_regex: ^(data|stringData|email|apiToken|host|hosts)$
    version: 3.12.2
